--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "chokidar": "^4.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tesseract.js": "^6.0.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
